pub: fist publish

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>home</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>HAFIDZ MAULANA</h1>
+    <p>
+        saya hanya manusia biasa yang masih banyak memiliki kekurangan
+    </p>
+    <h2>berikut teman teman saya di kelas</h2>
+    <ul>
+        <li>
+            <a href="https://amharul.github.io/" target="_blank">amharajul</a>
+        </li>
+    </ul>
 </body>
 </html>
