--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>HAFIDZ MAULANA</h1>
+    <h1>Nama : Hafidz Maulana</h1>
     <p>
-        saya hanya manusia biasa yang masih banyak memiliki kekurangan
+        Deskripsi diri saya: saya hanya manusia biasa yang masih memiliki banyak kekurangan, lahir pada tanggal 28 januari 2006,
+        berasal dari banda aceh, dan sekarang sedang menempuh pemnbelajaran di kampus politeknik negri lhokseumawe
     </p>
     <h2>berikut teman teman saya di kelas</h2>
     <ul>
         <li>
-            <a href="https://amharul.github.io/" target="_blank">amharajul</a>
+            <a href="https://alvi0syahril.github.io" target="_blank">Alvi Syahril</a>
+            <a href="https://bunga-hub.github.io/" target="_blank">Bunga Alfa Zahra</a>
+            <a href="http://devarisny.github.io" target="_blank">Deva Risny</a>
+            <a href="http://faqriyadiandika.github.io" target="_blank">faqriyadi Andika</a>
+            <a href="https://maishazahrani.github.io/" target="_blank">Mesya Zahrani</a>
+            <a href="https://mhafidzfiransyah.github.io/" target="_blank">M Hafidz Firansyah</a>
         </li>
     </ul>
 </body>
