pub: fist publish

--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     </p>
     <h2>berikut teman teman saya di kelas</h2>
     <ul>
-        <li>
-            <a href="https://alvi0syahril.github.io" target="_blank">Alvi Syahril</a>
-            <a href="https://bunga-hub.github.io/" target="_blank">Bunga Alfa Zahra</a>
-            <a href="http://devarisny.github.io" target="_blank">Deva Risny</a>
-            <a href="http://faqriyadiandika.github.io" target="_blank">faqriyadi Andika</a>
-            <a href="https://maishazahrani.github.io/" target="_blank">Mesya Zahrani</a>
-            <a href="https://mhafidzfiransyah.github.io/" target="_blank">M Hafidz Firansyah</a>
-        </li>
+           <li><a href="https://alvi0syahril.github.io" target="_blank">Alvi Syahril</a></li>
+           <li><a href="https://bunga-hub.github.io/" target="_blank">Bunga Alfa Zahra</a></li>
+           <li><a href="http://devarisny.github.io" target="_blank">Deva Risny</a></li>
+           <li><a href="http://faqriyadiandika.github.io" target="_blank">faqriyadi Andika</a></li> 
+           <li><a href="https://maishazahrani.github.io/" target="_blank">Mesya Zahrani</a></li> 
+           <li><a href="https://mhafidzfiransyah.github.io/" target="_blank">M Hafidz Firansyah</a></li> 
     </ul>
 </body>
 </html>
