--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@ title: home
         Deskripsi diri saya: saya hanya manusia biasa yang masih memiliki banyak kekurangan, lahir pada tanggal 28 januari 2006,
         berasal dari banda aceh, dan sekarang sedang menempuh pemnbelajaran di kampus politeknik negri lhokseumawe
     </p>
+
+    <button onclick="myfunction()"> klik disinii cepaatt </button>
