--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,10 @@ layout: default
 title: Blog
 ---
 
-<h1>Blog</h1>
+<div class="blog">
+    <h1>Blog</h1>
 
-<ul>
+    <ul>
     {% for post in site.posts %}
     <li>
         <a href="{{ post.url }}">{{ post.title }}</a>
@@ -13,4 +14,6 @@ title: Blog
         <p>{{ post.excerpt }}</p>
     </li>
     {% endfor %}
-</ul>
+    </ul>
+
+</div>
