--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@ layout: default
 title: home
 ---   
    
-   <h1>Nama : Hafidz Maulana</h1>
+<div class="data">
+    <h1>Yo Bro, I'm Hafidz Maulana</h1>
     <p>
-        Deskripsi diri saya: saya hanya manusia biasa yang masih memiliki banyak kekurangan, lahir pada tanggal 28 januari 2006,
-        berasal dari banda aceh, dan sekarang sedang menempuh pemnbelajaran di kampus politeknik negri lhokseumawe
+        seorang manusia biasa yang masih memiliki banyak kekurangan, yang memiliki kebiasaan menikmati secangkir kopi di pagi hari 
+        ("awali hari dengan secangkir kopi"). Lahir pada tanggal 28 januari 2006, berasal dari banda aceh, 
+        anak pertama dari 4 bersaudara. Jika kalian penasaran dengan saya, bisa ditemui di politeknik negri lhokseumawe
     </p>
+</div>
+
+<div class="hastag">
+    <p>#KOPIITUPAHIT!!</p>
+</div>
 
     <button onclick="myfunction()"> klik disinii cepaatt </button>
